--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,8 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
-upload_protocol = espota
-upload_port = 192.168.10.156 
+;upload_protocol = espota
+;upload_port = 192.168.10.156 
 
 ;40L 192.168.10.149
 ;70L 192.168.10.247
